--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -35,10 +35,8 @@ jobs:
       - name: Setup Pages
         uses: actions/configure-pages@v2
 
-      # - name: Upload artifact
-      #   uses: actions/upload-pages-artifact@v1
-      #   with:
-      #     path: 'dist'
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v1
 
       - name: Deploy to GitHub Pages
         id: deployment
